Closed
Bug 1239259
Opened 10 years ago
Closed 10 years ago
Pass WebGL2 conformance test tex-mipmap-levels
Categories
(Core :: Graphics: CanvasWebGL, defect)
Core
Graphics: CanvasWebGL
Tracking
()
RESOLVED
FIXED
mozilla46
Tracking | Status | |
---|---|---|
firefox46 | --- | fixed |
People
(Reporter: ethlin, Assigned: ethlin)
References
()
Details
Attachments
(1 file)
1.32 KB,
patch
|
jgilbert
:
review+
|
Details | Diff | Splinter Review |
error:
FAIL getError expected: INVALID_OPERATION. Was NO_ERROR : generateMipmap should fail for non-texture-filterable format
Assignee | ||
Comment 1•10 years ago
|
||
According to the spec[1], GL_INVALID_OPERATION is generated if the levelbaselevelbase array was not specified with an unsized internal format or a sized internal format that is both color-renderable and texture-filterable. So I add the check.
[1] https://www.khronos.org/opengles/sdk/docs/man3/html/glGenerateMipmap.xhtml
Attachment #8707368 -
Flags: review?(jgilbert)
Assignee | ||
Updated•10 years ago
|
Assignee: nobody → ethlin
Updated•10 years ago
|
Attachment #8707368 -
Flags: review?(jgilbert) → review+
Assignee | ||
Comment 2•10 years ago
|
||
try server result:
https://treeherder.mozilla.org/#/jobs?repo=try&revision=570ac1716ec1
Assignee | ||
Updated•10 years ago
|
Keywords: checkin-needed
Keywords: checkin-needed
Comment 4•10 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 10 years ago
status-firefox46:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
You need to log in
before you can comment on or make changes to this bug.
Description
•