Bug 1239259 - Fix WebGL2 generateMipmap checking. r=jgilbert